# narrative_index

./: .gitignore  Makefile  README - English.md  README.md  all_files.txt  csr  pyproject.toml  requirements.txt
docs/: AI_Narrative_Index_variables.md  ai_gloassries.xlsx  notes_finetuning_labeling.md
notebooks/: Training_FinBERT_annotation.ipynb  analyse_gc_results.ipynb  benchmark_windows.ipynb  calc_CAPM.ipynb  calc_betas.ipynb  compare_annotations.ipynb  compare_class_variants.ipynb  compare_resolve_annotations.ipynb  construct_latex_tables.ipynb  estimate_granger_causality.ipynb  estimate_transfer_entropy.ipynb  exploratory_analysis_aini.ipynb  exploratory_analysis_finbert_predictions.ipynb  exploratory_analysis_raw_res.ipynb  exploratory_analysis_results.ipynb  exploratory_analysis_wsj.ipynb  exploratory_custom_fin.ipynb  explore_assets.ipynb  focused_significant_measures_year_ticker_nocontrol_gc.pptx  investigating_FinBERT_annotations.ipynb  label_articles.ipynb  label_manually.ipynb  label_with_GPT.ipynb  sample_articles.ipynb  stationarity_evaluation.ipynb  stationarity_testing.ipynb  subset_controls.ipynb  subset_for_latex.ipynb  subset_sp500.ipynb  test_stationarity.ipynb  train_FinBERT_annot.ipynb  visualize_AINI_variables.ipynb  visualize_KSG.ipynb
reports/figures/: a2r_tables_auto.pptx  extremes_all_rows.pptx  focused_significant_measures_year_ticker_VIX_gc.pptx  focused_significant_measures_year_ticker_nocontrol_gc.pptx  significant_measures_year_ticker_VIX_gc.pptx  significant_measures_year_ticker_nocontrol_gc.pptx
reports/tables/: AINI_summary_statistics.html  AINI_to_return_w1.html  AINI_to_return_w2.html  Granger_causality_AINI_VIX.pptx  Granger_causality_AINI_VIX_large_magnitude_results.pptx  aini_extrema.csv  aini_extrema.tex  aini_extrema_weekly.tex  aini_to_ret_binary.tex  aini_to_ret_w0.tex  aini_to_ret_w1.tex  aini_to_ret_w2.tex  aini_weekly_extrema.csv  avg_daily_log_returns_by_period_pct.csv  capm_results.tex  capm_results_compounded_alpha.csv  correlation_narticles_AINI.tex  daily_log_returns_2023_2025.csv  diag_gc_w0_aini_to_return.tex  diag_gc_w0_return_to_aini.tex  diag_gc_w1_aini_to_return.tex  diag_gc_w1_return_to_aini.tex  diag_gc_w2_aini_to_return.tex  diag_gc_w2_return_to_aini.tex  extremes_full_table.pptx  gc_aini_to_vix.fdb_latexmk  gc_aini_to_vix.fls  gc_aini_to_vix.html  gc_aini_to_vix.tex  gc_bootstrap_F_all_lags_groupwise_AINI_to_return_3class_w1.html  gc_bootstrap_F_all_lags_groupwise_AINI_to_return_3class_w2.html  gc_bootstrap_F_all_lags_groupwise_return_to_AINI_3class_w1.html  gc_bootstrap_F_all_lags_groupwise_return_to_AINI_3class_w2.html  (+56 more)
(+61 files in other folders)
