[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "AI_narrative_index"
version = "0.0.1"
description = "This project constructs an AI Narrative Index by various annotation methods. 1: Fine-tuning FinBERT on manually annotated Wall Street Journal articles from 2023 to 2025 to infer relevance. 2: Using Dictionary to label relevant articles and canonical FinBERT for sentiment prediction. 3. Using GPT to label relevant articles and canonical FinBert for sentiment prediciton."
authors = [
  { name = "Lars Augustat" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

# Dependencies needed to run the project (add more as needed)
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "torch",
  "transformers",
  "tqdm",
  "datasets",
  "scipy"
]

[project.optional-dependencies]
dev = [
  "jupyter",
  "black",
  "ruff",
  "pytest",
  "ipykernel",
  "python-dotenv"
]

[tool.ruff]
line-length = 99
src = ["AI_narrative_index"]
include = ["pyproject.toml", "AI_narrative_index/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["AI_narrative_index"]
force-sort-within-sections = true
